--- a/src/NameSorter/NameSorter.csproj
+++ b/src/NameSorter/NameSorter.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>name_sorter</RootNamespace>
+    <RootNamespace>NameSorter</RootNamespace>
   </PropertyGroup>
 
 </Project>
